[project]
name = "document-redaction-swapper"
version = "0.1.0"
description = ""
authors = [
    {name = "Horst",email = "user@gmx.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "document_redaction_swapper", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
